Add a local mode for Evaluations (#232)
* Update cli.py

* add a local flag to the CLI and add the default taxonomy to the taxonomy in evaluate.py

* update the PolicyRule model so that it doesn't inherit from the FidesModel, update evaluate.py so skip server checks for policies, fix tests

* break out the policy population logic into its own function

* add the local evaluation test, update the docs with a new page on a standalone installation

* documentation verbiage changes, slight code organization tweaks

* fix a pylint issue

* Update docs/fides/docs/installation/installation.md

Co-authored-by: Phil Salant <PSalant726@users.noreply.github.com>

* Update docs/fides/docs/installation/pypi.md

Co-authored-by: Phil Salant <PSalant726@users.noreply.github.com>

* Update docs/fides/docs/quickstart/local_standalone.md

Co-authored-by: Phil Salant <PSalant726@users.noreply.github.com>

* Update docs/fides/docs/quickstart/local_standalone.md

Co-authored-by: Phil Salant <PSalant726@users.noreply.github.com>

* Update docs/fides/docs/quickstart/local_standalone.md

Co-authored-by: Phil Salant <PSalant726@users.noreply.github.com>

* Update docs/fides/mkdocs.yml

Co-authored-by: Phil Salant <PSalant726@users.noreply.github.com>

* Update fidesctl/src/fidesctl/cli/cli.py

Co-authored-by: Phil Salant <PSalant726@users.noreply.github.com>

* Update docs/fides/docs/quickstart/local_standalone.md

Co-authored-by: Phil Salant <PSalant726@users.noreply.github.com>

* add a "local_mode" env var to the config and make the cli dynamically display commands

* small docs update

* Update docs/fides/docs/installation/installation.md

Co-authored-by: Phil Salant <PSalant726@users.noreply.github.com>

* Update docs/fides/docs/quickstart/local_full.md

Co-authored-by: Phil Salant <PSalant726@users.noreply.github.com>

* Update docs/fides/docs/quickstart/local_standalone.md

Co-authored-by: Phil Salant <PSalant726@users.norepl

--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -4,7 +4,8 @@ nav:
   - What is Fides?: index.md
   - Quick Start:
       - Overview: quickstart/overview.md
-      - Running Fidesctl locally: quickstart/local.md
+      - Running Fidesctl Locally (Standalone): quickstart/local_standalone.md
+      - Running Fidesctl Locally (Full Installation): quickstart/local_full.md
       - Running Fidesctl in Docker: quickstart/docker.md
   - Installation:
       - Installation Overview: installation/installation.md
