--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,6 +45,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Local Evaluation
-        run: fidesctl evaluate --local fidesctl/fides_resources/
+        run: fidesctl --local evaluate fidesctl/fides_resources/
         env:
           FIDESCTL_CONFIG_PATH: fidesctl/fidesctl.toml
