--- a/.github/workflows/safe_pr_checks.yml
+++ b/.github/workflows/safe_pr_checks.yml
@@ -1,5 +1,7 @@
-name: Run CI
-on: [push]
+name: CI Checks - Safe
+on: [
+  pull_request
+]
 
 jobs:
   Autoformat:
@@ -65,16 +67,3 @@ jobs:
         uses: actions/checkout@v2
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: make pytest-integration-erasure
-
-  Integration-Tests-External:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Running CI for branch ${{ github.ref }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - name: Run unit tests that connect to an external db
-        env:
-          REDSHIFT_TEST_URI: ${{ secrets.REDSHIFT_TEST_URI }}
-          SNOWFLAKE_TEST_URI: ${{ secrets.SNOWFLAKE_TEST_URI }}
-        run: make pytest-external-integration
