Refactor CI checks to run as a single job (#92)
* Refactor CI checks to run as a single job

This allows the docker build cache to be shared for each check, which is
the majority of the build time. This will likely reduce CI usage by a
factor of 7, until we have a solution that allows running in parallel
with a shared docker cache.

* Fixes

* Polish tweaks

--- a/.github/workflows/safe_pr_checks.yml
+++ b/.github/workflows/safe_pr_checks.yml
@@ -1,69 +1,40 @@
 name: CI Checks - Safe
-on: [
-  pull_request
-]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
-  Autoformat:
+  Check-All:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Running CI for branch ${{ github.ref }}."
-      - name: Check out repository code
+      - name: Checkout
         uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: make black-ci
 
-  Check-Migrations:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Running CI for branch ${{ github.ref }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: make init-db
-      - run: make check-migrations
+      - name: Docker Compose Build
+        run: make compose-build
 
-  Lint:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Running CI for branch ${{ github.ref }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: make pylint
+      - name: Format
+        run: make black-ci
 
-  Check-Types:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Running CI for branch ${{ github.ref }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: make mypy
+      - name: Lint
+        run: make pylint
 
-  Unit-Tests:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Running CI for branch ${{ github.ref }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: make pytest
+      - name: Check Types
+        run: make mypy
 
-  Integration-Tests-Access:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Running CI for branch ${{ github.ref }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: make pytest-integration-access
+      - name: Init DB
+        run: make init-db
 
-  Integration-Tests-Erasure:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Running CI for branch ${{ github.ref }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: make pytest-integration-erasure
+      - name: Check Migrations
+        run: make check-migrations
+
+      - name: Unit Tests
+        run: make pytest
+
+      - name: Integration Tests (Access)
+        run: make pytest-integration-access
+
+      - name: Integration Tests (Erasure)
+        run: make pytest-integration-erasure
