--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,7 @@ services:
       timeout: 5s
       retries: 5
     volumes:
-      - ./init-postgres:/docker-entrypoint-initdb.d
-      - postgres:/var/lib/postgresql/datacreate-multiple-postgresql-databases.sh
+      - postgres:/var/lib/postgresql/data
     expose:
       - 5432
     ports:
