Annotate Fidesctl with Fides (#155)
* Annotate Fidesctl with Fides

* updated the devcontainer with the fidesctl plugin and generated a dataset.yml

* clean up the dataset.yml

* start editing a system

* add a policy and a CI/CD action

* fix paths for the ci job

* add dependent services

* put quotes around the entrypoint

* playing code golf, adjusted the brackets

* add a better default command for the dockerfile, update the makefile

* update the webserver ci/cd service

* remove the supporting services from the fidesctl run, these should be persistent services

* update the policy name

* update the system, policy, and fix the CI job

* put the --local flag in the right spot

* drop the env from the CI

* fix a broken but passing test, fix __init__.py not properly setting local_mode

* install fidesctl directly from the repo

* make the fidesctl evaluation a make target :)

* don't start the deps when running certain CI checks

* update the formatting on the echo of policies to be evaluated

* add a description for the fidesctl dataset

Co-authored-by: Thomas La Piana <tal103020@icloud.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,8 @@
 		"davidanson.vscode-markdownlint",
 		"bungcip.better-toml",
 		"github.vscode-pull-request-github",
-		"ms-python.vscode-pylance"
+		"ms-python.vscode-pylance",
+		"ethyca.fidesctl"
 	],
 	"settings": {
 		"editor.formatOnSave": true,
@@ -19,5 +20,8 @@
 		"editor.insertSpaces": true,
 		"python.formatting.provider": "black",
 		"python.linting.mypyEnabled": true,
+		"conf.fidesctl.confFilePath": "/fides/fidesctl/fidesctl.toml",
+		"conf.fidesctl.manifestFilePath": "/fides/fidesctl/fides_resources/",
+		"conf.fidesctl.parseOnSave": true
 	}
 }
