--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Test Fidesctl
+name: Tests
 
 # Only test on Pull Requests that target main
 on:
@@ -10,7 +10,7 @@ on:
       - .github/workflows/test.yaml
 
 jobs:
-  test:
+  Tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -20,6 +20,9 @@ jobs:
 
       - name: Check fidesctl installed
         run: make check-install
+
+      - name: Fidesctl Evaluation
+        run: make fidesctl
 
       - name: Format
         run: make black
