replace the CLI docs with auto-generated docs. lots of small tweaks make this happen

--- a/docs/fides/Dockerfile
+++ b/docs/fides/Dockerfile
@@ -11,9 +11,14 @@ RUN pip install -U pip
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-# Copy in the application files and install it locally
+# Copy in the required files
 COPY ./docs /docs
 WORKDIR /docs
+
+# Generate the OpenAPI Docs
+ADD generate_openapi.py generate_openapi.py
+RUN python generate_openapi.py ./api/openapi.json
+
 
 EXPOSE 8000
 CMD ["mkdocs", "serve", "--dev-addr=0.0.0.0:8000"]
