--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     command: uvicorn --host 0.0.0.0 --port 8080 --reload fidesapi.main:app
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://0.0.0.0:8000/health"]
+      test: [ "CMD", "curl", "-f", "http://0.0.0.0:8000/health" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -27,7 +27,7 @@ services:
   fidesctl-db:
     image: postgres:12
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -46,10 +46,11 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./docs/fides:/docs
+      - ./fidesctl:/fidesctl
     expose:
       - 8000
     ports:
       - "8000:8000"
 
 volumes:
-  postgres:
+  postgres: null
