--- a/fidesctl/fidesctl.toml
+++ b/fidesctl/fidesctl.toml
@@ -3,3 +3,4 @@ server_url = "http://fidesctl:8080"
 
 [api]
 database_url = "postgresql+psycopg2://postgres:fidesctl@fidesctl-db:5432/fidesctl"
+test_database_url = "postgresql+psycopg2://postgres:fidesctl@fidesctl-db:5432/fidesctl_test"
