--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     command: uvicorn --host 0.0.0.0 --port 8080 --reload fidesapi.main:app
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://0.0.0.0:8080/health"]
+      test: [ "CMD", "curl", "-f", "http://0.0.0.0:8080/health" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -21,15 +21,13 @@ services:
         source: .
         target: /fides
         read_only: False
-    environment:
-      FIDESCTL_TEST_MODE: ${FIDESCTL_TEST_MODE:-False}
     env_file:
       - env_files/fidesctl.env
 
   fidesctl-db:
     image: postgres:12
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -54,4 +52,4 @@ services:
       - "8000:8000"
 
 volumes:
-  postgres:
+  postgres: null
