--- a/fidesctl/tests/test_config.toml
+++ b/fidesctl/tests/test_config.toml
@@ -2,4 +2,4 @@
 server_url = "http://fidesctl:8080"
 
 [api]
-database_url = "postgresql+psycopg2://postgres:fidesctl@fidesctl-db:5432/fidesctl"
+test_database_url = "postgresql+psycopg2://postgres:fidesctl@fidesctl-db:5432/fidesctl_test"
