annotate/generate dataset cli commands (#197)
* annotate/generate dataset cli commands

* Update generate-dataset.md

* Delete openapi.json

Co-authored-by: douglas fulton <dfulton@ad1.systemadmin.com>
Co-authored-by: kelly <85575406+iamkelllly@users.noreply.github.com>

--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -40,19 +40,20 @@ nav:
           - Data Subjects: language/taxonomy/data_subjects.md
           - Data Qualifiers: language/taxonomy/data_qualifiers.md
   - CLI:
-      - CLI Overview: cli/cli.md
-      - annotate-dataset: cli/annotate-dataset.md
-      - apply: cli/apply.md
-      - delete: cli/delete.md
-      - evaluate: cli/evaluate.md
-      - get: cli/get.md
-      - init-db: cli/init-db.md
-      - ls: cli/ls.md
-      - parse: cli/parse.md
-      - ping: cli/ping.md
-      - reset-db: cli/reset-db.md
-      - view-config: cli/view-config.md
-      - webserver: cli/webserver.md
+    - CLI Overview: cli/cli.md
+    - annotate-dataset: cli/annotate-dataset.md
+    - apply: cli/apply.md
+    - delete: cli/delete.md
+    - evaluate: cli/evaluate.md
+    - generate-dataset: cli/generate-dataset.md
+    - get: cli/get.md
+    - init-db: cli/init-db.md
+    - ls: cli/ls.md
+    - parse: cli/parse.md
+    - ping: cli/ping.md
+    - reset-db: cli/reset-db.md
+    - view-config: cli/view-config.md
+    - webserver: cli/webserver.md
   - API: api/index.md
   - Development:
       - Overview: development/overview.md
