Only push to conda on tag releases

--- a/.github/workflows/publish_conda.yaml
+++ b/.github/workflows/publish_conda.yaml
@@ -1,14 +1,8 @@
 name: Publish the CLI on Conda
 
-# on:
-#   push:
-#     tags:
-#       - "*"
 on:
-  pull_request:
-    branches:
-      - main
-    paths:
+  push:
+    tags:
       - "*"
 jobs:
   upload_to_conda:
