Automate CLI Documentation (#243)
* Automate CLI Documentation

* replace the CLI docs with auto-generated docs. lots of small tweaks make this happen

* fix running the docs directly from a docker container

* fix the docs build step

* fix the CLI section, set pytest to exit after the first failure

* update CLI documentation

* revert changes in how the API docs are generated, as this would require a larger refactor

Co-authored-by: Thomas La Piana <tal103020@icloud.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./docs/fides:/docs
+      - ./fidesctl:/fidesctl
     expose:
       - 8000
     ports:
