--- a/docs/fides/Dockerfile
+++ b/docs/fides/Dockerfile
@@ -11,8 +11,8 @@ RUN pip install -U pip
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-# Copy in the application files and install it locally
-COPY ./docs /docs
+# Copy in the required files
+COPY . /docs
 WORKDIR /docs
 
 EXPOSE 8000
