--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -1,4 +1,4 @@
-name: Test
+name: PR Checks
 
 on:
   pull_request:
@@ -23,7 +23,7 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build fidesctl and export
+      - name: Build fidesctl container
         uses: docker/build-push-action@v2
         with:
           builder: ${{ steps.buildx.outputs.name }}
@@ -33,7 +33,7 @@ jobs:
           push: false
           tags: ${{ env.IMAGE }}
 
-      - name: Upload fidesctl artifact
+      - name: Upload fidesctl container
         uses: actions/upload-artifact@v2
         with:
           name: ${{ env.CONTAINER }}
@@ -57,19 +57,19 @@ jobs:
         ports:
           - 5432:5432
     steps:
-      - name: Download fidesctl artifact
+      - name: Download fidesctl container
         uses: actions/download-artifact@v2
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load image
+      - name: Load fidesctl image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
-      - name: Check install
+      - name: Check fidesctl installation
         run: docker run ${{ env.IMAGE }} fidesctl
 
-      - name: Fidesctl evaluation
+      - name: Run fidesctl evaluation
         run: docker run --rm ${{ env.IMAGE }} fidesctl --local evaluate fides_resources/
 
   Format:
@@ -89,13 +89,13 @@ jobs:
         ports:
           - 5432:5432
     steps:
-      - name: Download fidesctl artifact
+      - name: Download fidesctl container
         uses: actions/download-artifact@v2
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load image
+      - name: Load fidesctl image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Run formatter
@@ -118,13 +118,13 @@ jobs:
         ports:
           - 5432:5432
     steps:
-      - name: Download fidesctl artifact
+      - name: Download fidesctl container
         uses: actions/download-artifact@v2
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load image
+      - name: Load fidesctl image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Run linter
@@ -147,13 +147,13 @@ jobs:
         ports:
           - 5432:5432
     steps:
-      - name: Download fidesctl artifact
+      - name: Download fidesctl container
         uses: actions/download-artifact@v2
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load image
+      - name: Load fidesctl image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Run typechecker
@@ -176,13 +176,13 @@ jobs:
         ports:
           - 5432:5432
     steps:
-      - name: Download fidesctl artifact
+      - name: Download fidesctl container
         uses: actions/download-artifact@v2
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load image
+      - name: Load fidesctl image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Run cyclomatic complexity check
@@ -205,13 +205,13 @@ jobs:
         ports:
           - 5432:5432
     steps:
-      - name: Download fidesctl artifact
+      - name: Download fidesctl container
         uses: actions/download-artifact@v2
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load image
+      - name: Load fidesctl image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Run test suite
