--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -1,10 +1,28 @@
-name: Publish the CLI on Conda
+name: Publish fidesctl
 
 on:
   push:
     tags:
       - "*"
+
 jobs:
+  upload_to_pypi:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install Twine
+        run: pip install twine
+
+      - name: Twine Upload
+        run: |
+          cd fidesctl/
+          python setup.py sdist 
+          twine upload dist/*
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+
   upload_to_conda:
     runs-on: ubuntu-latest
     steps:
