--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
       - Installation Overview: installation/installation.md
       - Prerequisites & Dependencies: installation/prerequisites_dependencies.md
       - Installation from PyPI: installation/pypi.md
+      - Installation from Conda: installation/conda.md
       - Installation from Docker: installation/docker.md
       - Setting up the database: installation/database.md
       - Configuration: installation/configuration.md
@@ -40,20 +41,20 @@ nav:
           - Data Subjects: language/taxonomy/data_subjects.md
           - Data Qualifiers: language/taxonomy/data_qualifiers.md
   - CLI:
-    - CLI Overview: cli/cli.md
-    - annotate-dataset: cli/annotate-dataset.md
-    - apply: cli/apply.md
-    - delete: cli/delete.md
-    - evaluate: cli/evaluate.md
-    - generate-dataset: cli/generate-dataset.md
-    - get: cli/get.md
-    - init-db: cli/init-db.md
-    - ls: cli/ls.md
-    - parse: cli/parse.md
-    - ping: cli/ping.md
-    - reset-db: cli/reset-db.md
-    - view-config: cli/view-config.md
-    - webserver: cli/webserver.md
+      - CLI Overview: cli/cli.md
+      - annotate-dataset: cli/annotate-dataset.md
+      - apply: cli/apply.md
+      - delete: cli/delete.md
+      - evaluate: cli/evaluate.md
+      - generate-dataset: cli/generate-dataset.md
+      - get: cli/get.md
+      - init-db: cli/init-db.md
+      - ls: cli/ls.md
+      - parse: cli/parse.md
+      - ping: cli/ping.md
+      - reset-db: cli/reset-db.md
+      - view-config: cli/view-config.md
+      - webserver: cli/webserver.md
   - API: api/index.md
   - Development:
       - Overview: development/overview.md
