--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -214,5 +214,8 @@ jobs:
       - name: Load fidesctl image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
+      - name: Start fidesctl
+        run: docker run ${{ env.IMAGE }}
+
       - name: Run test suite
         run: docker run ${{ env.IMAGE }} pytest -x
