--- a/docs/fides/requirements.txt
+++ b/docs/fides/requirements.txt
@@ -2,4 +2,5 @@ mkdocs-material==7.2.5
 mkdocs-minify-plugin==0.4.0
 mkdocs-render-swagger-plugin==0.0.3
 mkdocs-click==0.5.0
+mkdocs-git-revision-date-plugin
 fidesctl # We always want the latest version
