update "enabled_if_env" var

--- a/.github/workflows/publish_docs.yaml
+++ b/.github/workflows/publish_docs.yaml
@@ -19,4 +19,4 @@ jobs:
       - name: Publish docs
         run: mkdocs gh-deploy -v -f docs/fides/mkdocs.yml --force
         env:
-          CI: true
+          PROD_PUBLISH: true
