--- a/.github/workflows/publish_docs.yaml
+++ b/.github/workflows/publish_docs.yaml
@@ -18,3 +18,5 @@ jobs:
         run: make docs-build
       - name: Publish docs
         run: mkdocs gh-deploy -v -f docs/fides/mkdocs.yml --force
+        env:
+          PROD_PUBLISH: true
