Fix the pre-commit configuration (#266)
* Fix the pre-commit configuration

* tweak the pre-commit file

* update the pre-commit hooks to only run on fidesctl directory changes, add notes to the docs about the new hooks

* Update code_style.md

* add files to the pre-commit hooks

Co-authored-by: Thomas La Piana <tal103020@icloud.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,32 @@
+minimum_pre_commit_version: "2"
+
 repos:
   - repo: local
     hooks:
       - id: black
         name: black
         entry: make black
-        language: python
-        always_run: True
+        files: "^fidesctl/"
+        types_or: [file, python]
+        language: system
+
+      - id: mypy
+        name: mypy
+        entry: make mypy
+        files: "^fidesctl/"
+        types_or: [file, python]
+        language: system
+
+      - id: xenon
+        name: xenon
+        entry: make xenon
+        files: "^fidesctl/"
+        types_or: [file, python]
+        language: system
+
+      - id: pylint
+        name: pylint
+        entry: make pylint
+        files: "^fidesctl/"
+        types_or: [file, python]
+        language: system
