--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -4,13 +4,13 @@ on:
   pull_request:
     branches:
       - main
-    paths: # Only run tests when certain paths change
+    paths:
       - fidesctl/**
       - .github/workflows/test.yaml
 
 env:
-  CONTAINER: fidesctl-${{ github.event.pull_request.head.sha }}
-  IMAGE: ethyca/fidesctl:${{ github.event.pull_request.head.sha }}
+  CONTAINER: fidesctl:local
+  IMAGE: ethyca/fidesctl:local
 
 jobs:
   Build:
@@ -40,7 +40,7 @@ jobs:
           path: /tmp/${{ env.CONTAINER }}.tar
           retention-days: 7
 
-  Evaluate:
+  Fidesctl:
     needs: Build
     runs-on: ubuntu-latest
     steps:
@@ -54,12 +54,12 @@ jobs:
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Check fidesctl installation
-        run: docker run ${{ env.IMAGE }} fidesctl
+        run: make check-installation
 
       - name: Run fidesctl evaluation
-        run: docker run --rm ${{ env.IMAGE }} fidesctl --local evaluate fides_resources/
+        run: make fidesctl
 
-  Format:
+  Black:
     needs: Build
     runs-on: ubuntu-latest
     steps:
@@ -73,9 +73,9 @@ jobs:
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Run formatter
-        run: docker run ${{ env.IMAGE }} black --check src/
+        run: make black
 
-  Lint:
+  Pylint:
     needs: Build
     runs-on: ubuntu-latest
     steps:
@@ -89,9 +89,9 @@ jobs:
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Run linter
-        run: docker run ${{ env.IMAGE }} pylint src/
+        run: make pylint
 
-  TypeCheck:
+  Mypy:
     needs: Build
     runs-on: ubuntu-latest
     steps:
@@ -105,9 +105,9 @@ jobs:
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Run typechecker
-        run: docker run ${{ env.IMAGE }} mypy
+        run: make mypy
 
-  Complexity:
+  Xenon:
     needs: Build
     runs-on: ubuntu-latest
     steps:
@@ -121,7 +121,7 @@ jobs:
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Run cyclomatic complexity check
-        run: docker run ${{ env.IMAGE }} xenon src --max-absolute B --max-modules B --max-average A --ignore "data, tests, docs" --exclude "src/fidesctl/core/annotate_dataset.py,src/fidesctl/_version.py"
+        run: make xenon
 
   Test:
     needs: Build
