--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   fidesctl:
     build:
       context: fidesctl
-      dockerfile: Dockerfile
+    image: ethyca/fidesctl:local
     command: uvicorn --host 0.0.0.0 --port 8080 --reload fidesapi.main:app
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://0.0.0.0:8080/health" ]
@@ -43,7 +43,7 @@ services:
   docs:
     build:
       context: docs/fides/
-      dockerfile: Dockerfile
+    image: ethyca/fidesctl-docs:local
     volumes:
       - ./docs/fides:/docs
       - ./fidesctl:/fidesctl
