--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ services:
   fidesctl:
     build:
       context: fidesctl
-    image: ethyca/fidesctl:local
+      cache_from:
+        - ethyca/fidesctl # If the container already exists, pull from the cache
+    image: ethyca/fidesctl
     command: uvicorn --host 0.0.0.0 --port 8080 --reload fidesapi.main:app
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://0.0.0.0:8080/health" ]
@@ -43,7 +45,7 @@ services:
   docs:
     build:
       context: docs/fides/
-    image: ethyca/fidesctl-docs:local
+    image: ethyca/fidesctl-docs
     volumes:
       - ./docs/fides:/docs
       - ./fidesctl:/fidesctl
