change docker-compose to docker compose, add a logger in the CI checks

--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -50,6 +50,8 @@ jobs:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
+      - run: docker image ls
+
       - name: Load fidesctl image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
